2011-04-29 TADA Tadashi <t@tdtds.jp>
	* tdiary/blog_style.rb: a workaround for error on ruby 1.9.2.

2011-04-29 TADA Tadashi <t@tdtds.jp>
	* Release 3.0.2.

2011-04-25  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
	* tdiary/blogwiki_style.rb: remove 1.8 backward compatibility.

2010-09-20 TADA Tadashi <t@tdtds.jp>
	* Release 3.0.1.

2010-09-08 TADA Tadashi <t@tdtds.jp>
	* plugin/blog-category.rb: decreased times of method calling.

2010-08-28  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
	* Release 3.0.0

2009-11-19 TADA Tadashi <t@tdtds.jp>
	* plugin/{ja|en}/blog-style.rb: comment_description -> comment_description_default.

2009-08-03 TADA Tadashi <t@tdtds.jp>
	* release 2.3.3.

2009-05-08 TADA Tadashi <t@tdtds.jp>
	* release 2.3.2.

2009-04-15 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* tdiary/*.rb: converted to utf-8.

2008-10-19 TADA Tadashi <sho@spc.gr.jp>
	* release 2.3.1.

2008-08-01 TADA Tadashi <sho@spc.gr.jp>
	* plugin/title-navi.rb: reverted dirty hack of #116.

2008-07-17 TADA Tadashi <sho@spc.gr.jp>
	* plugin/title-navi.rb: dirty hack for #116.

2008-07-11 TADA Tadashi <sho@spc.gr.jp>
	* plugin/blog-style.rb, title-navi.rb: moved CSS to hide date fields from
	title-navi.rb to blog-style.rb.

2008-07-06 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: added option 'whatsnew_list.url'.

2008-06-09 TADA Tadashi <sho@spc.gr.jp>
	* plugin/ja/*.rb: converted to UTF-8.

2008-02-29 TADA Tadashi <sho@spc.gr.jp>
	* release 2.2.1.

2008-01-05 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: delete category tags from whatsnew_list's
	output.

2007-12-16 TADA Tadashi <sho@spc.gr.jp>
	* release 2.2.0.

2007-11-14 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/blog_style.rb: fixed bug of newdate that dose not generate right
	date.

2007-09-23 TADA Tadashi <sho@spc.gr.jp>
	* whatsnew-list.rb: splited CDATA section by each ']]>'.

2007-05-01 TADA Tadashi <sho@spc.gr.jp>
	* whatsnew-list.rb: add label elements in update form.
